--- a/src/template/google_report_view.html
+++ b/src/template/google_report_view.html
@@ -39,7 +39,8 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
-            <li class="active"><a href="/reports">Reports</a></li>
+            <li><a href="/reports">Reports</a></li>
+            <li class="active"><a href="/google-reports">Google Reports</a></li>
             <li><a href="/rankings">Rankings</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
