--- a/src/template/ranking_reports.html
+++ b/src/template/ranking_reports.html
@@ -40,8 +40,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
-            <li><a href="/reports">Reports</a></li>
-            <li class="active"><a href="/google-reports">Google Reports</a></li>
+            <li class="active"><a href="/reports">Reports</a></li>
             <li><a href="/rankings">Rankings</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -73,6 +72,31 @@
     </div><!-- /.container -->
     <div class="container" id="reports_main_container">
     {% for report in reports %}
+    	<div id=report">
+    		<table id="report_table">
+    			<td><a href="viewreport?id={{report.key.id()}}"><img class="report_image" src="static/images/report.png"/></a></td>
+    			<td>
+			    	<table id="report_subtable">
+			    		<tr>
+							<th>Web</th>
+							<td><a href="{{report.web}}">{{report.web}}</a></td>
+						</tr>
+							<th>Validation type</th>
+							<td>{{report.validation_type}}</td>
+						<tr>
+							<th>Only Domain?</th>
+							<td>{% if report.onlyDomain %} Yes {% else %} No {% endif %}</td>
+						</tr>
+						<tr>
+							<th>Pages</th>
+							<td>{{report.pages}}</td>
+						</tr>
+					</table>
+				</td>
+			</table>
+		</div>
+	{% endfor %}
+	{% for report in reportsGoogle %}
     	<div id=report">
     		<table id="report_table">
     			<td><a href="google-viewreport?id={{report.key.id()}}"><img class="report_image" src="static/images/report.png"/></a></td>
