--- a/src/template/reports.html
+++ b/src/template/reports.html
@@ -41,7 +41,6 @@
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
             <li class="active"><a href="/reports">Reports</a></li>
-            <li><a href="/google-reports">Google Reports</a></li>
             <li><a href="/rankings">Rankings</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -76,6 +75,31 @@
     	<div id=report">
     		<table id="report_table">
     			<td><a href="viewreport?id={{report.key.id()}}"><img class="report_image" src="static/images/report.png"/></a></td>
+    			<td>
+			    	<table id="report_subtable">
+			    		<tr>
+							<th>Web</th>
+							<td><a href="{{report.web}}">{{report.web}}</a></td>
+						</tr>
+							<th>Validation type</th>
+							<td>{{report.validation_type}}</td>
+						<tr>
+							<th>Only Domain?</th>
+							<td>{% if report.onlyDomain %} Yes {% else %} No {% endif %}</td>
+						</tr>
+						<tr>
+							<th>Pages</th>
+							<td>{{report.pages}}</td>
+						</tr>
+					</table>
+				</td>
+			</table>
+		</div>
+	{% endfor %}
+	{% for report in reportsGoogle %}
+    	<div id=report">
+    		<table id="report_table">
+    			<td><a href="google-viewreport?id={{report.key.id()}}"><img class="report_image" src="static/images/report.png"/></a></td>
     			<td>
 			    	<table id="report_subtable">
 			    		<tr>
