--- a/src/template/index.html
+++ b/src/template/index.html
@@ -44,6 +44,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
             <li><a href="/reports">Reports</a></li>
+            <li><a href="/ranking-reports">Ranking Reports</a></li>
             <li><a href="/rankings">Rankings</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
