--- a/src/template/reports.html
+++ b/src/template/reports.html
@@ -41,6 +41,7 @@
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
             <li class="active"><a href="/reports">Reports</a></li>
+            <li><a href="/ranking-reports">Ranking Reports</a></li>
             <li><a href="/rankings">Rankings</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
