Intentando solucionar problemas de informes muy largos

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -82,9 +82,11 @@
 		  <label class="radio-inline">
 	      	<input value="HTML" type="radio" name="optradio" checked>Validate HTML/XHTML/CSS
 		  </label>
-		  
 		  <label class="radio-inline">
-		  	<input value="WCAG 2.0" type="radio" name="optradio">Validate WCAG 2.0
+		  	<input value="WCAG2-A" type="radio" name="optradio">Validate WCAG 2.0-A
+		  </label>
+		  <label class="radio-inline">
+		  	<input value="WCAG2-AA" type="radio" name="optradio">Validate WCAG 2.0-AA
 		  </label>
 		  <label class="radio-inline">
 		  	<input value="CHECK AVAILABILITY" type="radio" name="optradio">Check availability
