--- a/src/template/google_report_view.html
+++ b/src/template/google_report_view.html
@@ -78,7 +78,7 @@
 		<br/><br/>
 		<p>Validation executed by: {{report.user}}</p>
 		
-		<h1 id="rankingPositionNumber">{{report.scoreUsability}}</h1>
+		<h1 id="rankingPositionNumber">{{report.score}}</h1>
 	</div>
 	
 	<div id="reportResultsContainer">
