--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -86,6 +86,10 @@ table, table td, table th{
 	border-top-left-radius: 6px;
 }
 
+#reports_subcontainer{
+	width: 100%;
+}
+
 #report_table{
 	margin-bottom: 30px;
 }
@@ -225,4 +229,13 @@ table.urlBlock{
 
 #form-create table{
 	width: 100%;
+	margin-bottom: 20px;
+}
+
+#reports_main_container > table{
+	margin-bottom: 20px;
+}
+
+#buttonNew{
+	float: left;
 }
