--- a/src/template/ranking_reports_viewer.html
+++ b/src/template/ranking_reports_viewer.html
@@ -43,6 +43,9 @@
             <li><a href="/reports">Reports</a></li>
             <li class="active"><a href="/ranking-reports">Ranking Reports</a></li>
             <li><a href="/rankings">Rankings</a></li>
+            {% if user.group == 'Admin' %}
+            <li><a href="/users">Users</a>
+            {% endif %}
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -92,6 +95,10 @@
 							<th>Pages</th>
 							<td>{{report.pages}}</td>
 						</tr>
+						<tr>
+							<th>Score</th>
+							<td>{{report.score}}</td>
+						</tr>
 					</table>
 				</td>
 			</table>
@@ -116,6 +123,10 @@
 						<tr>
 							<th>Pages</th>
 							<td>{{report.pages}}</td>
+						</tr>
+						<tr>
+							<th>Score</th>
+							<td>{{report.score}}</td>
 						</tr>
 					</table>
 				</td>
