--- a/src/template/users.html
+++ b/src/template/users.html
@@ -40,9 +40,10 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
-            <li class="active"><a href="/reports">Reports</a></li>
+            <li><a href="/reports">Reports</a></li>
             <li><a href="/ranking-reports">Ranking Reports</a></li>
             <li><a href="/rankings">Rankings</a></li>
+            <li class="active"><a href="/users">Users</a>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -77,13 +78,11 @@
          			<td>{{user.full_name}}</td>
          			<td><a href="mailto:{{user.email}}">{{user.email}}</a></td>
          			<td>{{user.group}}</td>
-         			<td><button id="buttonEdit-{{user.name}}">Edit</button></td>
-         			<td>
-	         			<form id="form-delete" role="form" action="/delete-user" method="post">
-		         			<input type="hidden" id="name" name="name" value="{{user.name}}"/>
-		         			<input type="submit" id="buttonDelete" value="Delete"/>
-	         			</form>
-         			</td>
+         			<td><button id="buttonEdit-{{user.name}}" class="btn btn-info">Edit</button></td>
+         			<td><button id="buttonDelete-{{user.name}}" class="btn btn-danger">Delete</button></td>
+         			<form id="form-delete-{{user.name}}" role="form" action="/delete-user" method="post">
+		         		<input type="hidden" id="name" name="name" value="{{user.name}}"/>
+	         		</form>
          		</tr>
          		<tr>
          			<td id="edit-{{user.name}}" colspan="6">
@@ -150,9 +149,8 @@
 	         		</table>
          		</form>
         	</div>
-         	<button id="buttonNew">New user</button>
+         	<button id="buttonNew" class="btn btn-success">New user</button>
          </div>
-         <form
 	</div>
 
     <!-- Bootstrap core JavaScript
@@ -220,9 +218,14 @@
 	  		}
 	  		else{
 	  			$("#edit-{{user.name}}").show(400);
-	  	}
+	  		}
+	  	});
+	  	$("#buttonDelete-{{user.name}}").click(function(){
+	  		if (confirm("Are you sure?")) {
+	  			$("#form-delete-{{user.name}}").submit();
+	  		}
   		
-  	});
+  		});
   	{% endfor %}
   	
   	$("#buttonNew").click(function(){
