--- a/src/template/google_page_view.html
+++ b/src/template/google_page_view.html
@@ -1,29 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
-    <script src="static/js/jquery.min.js"></script>
 
-    <title>Spiderbot</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="static/css/main.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
+  {{head|safe}}
+  
   <body>
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -50,6 +29,9 @@
             <li><a href="#contact">Contact</a></li>
           </ul>
           <input id="button-logout" name="button-logout" type="button" value="Log Out" onclick="location.href='/logout';" class="btn btn-warning" />
+          {% if user.lock %}
+          <input id="button-cancel" name="button-cancel" type="button" value="Cancel Validation" onclick="location.href='/cancel-validation';" class="btn btn-primary" />
+          {% endif %}
         </div><!--/.nav-collapse -->
       </div>
     </nav>
@@ -72,12 +54,9 @@
     <div class="container" id="google_reports_container">
 		<div id="usability">
 	  <h1>USABILITY</h1>
-	  <table>
-		  	<tr>
-		  		<th>Score</th>
-		  		<td>{{scoreUsability}}</td>
-		  	</tr>
-	  	</table>
+	  	<div id="score_row">
+	  		<p>Score: {{scoreUsability}}/100</p>
+	  	</div>
 	  	{% for i in range(types|length) %}
 	  		{% if types[i] == 'USABILITY' %}
 		  		<table>
@@ -115,12 +94,9 @@
   <div class="container" id="google_reports_container">
   <div id="speed">
 	  <h1>SPEED</h1>
-	  <table>
-		  	<tr>
-		  		<th>Score</th>
-		  		<td>{{scoreSpeed}}</td>
-		  	</tr>
-	  	</table>
+	  	<div id="score_row">
+	  		<p>Score: {{scoreSpeed}}/100</p>
+	  	</div>
 	  	{% for i in range(types|length) %}
 	  		{% if types[i] == 'SPEED' %}
 		  		<table>
@@ -155,6 +131,8 @@
 	  	{% endfor %}
   </div>
 	</div>
+	
+	{{footer|safe}}
 	
 
     <!-- Bootstrap core JavaScript
@@ -209,6 +187,8 @@
 			notified = false;
 	   	}
 	},1000);
+	
+	});
    
    </script>
 	
