--- a/src/template/google_report_view.html
+++ b/src/template/google_report_view.html
@@ -1,27 +1,6 @@
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
-    <script src="static/js/jquery.min.js"></script>
-
-    <title>Spiderbot</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="static/css/main.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
+  
+  {{head|safe}}
 
   <body>
 
@@ -49,6 +28,9 @@
             <li><a href="#contact">Contact</a></li>
           </ul>
           <input id="button-logout" name="button-logout" type="button" value="Log Out" onclick="location.href='/logout';" class="btn btn-warning" />
+          {% if user.lock %}
+          <input id="button-cancel" name="button-cancel" type="button" value="Cancel Validation" onclick="location.href='/cancel-validation';" class="btn btn-primary" />
+          {% endif %}
         </div><!--/.nav-collapse -->
       </div>
     </nav>
@@ -73,8 +55,8 @@
 		<p>Only domain?: {% if report.onlyDomain %} Yes {% else %} No {% endif %}</p>
 		<p>Pages: {{pages}}</p>
 		<br/>
-		<p>{{report.scoreUsability}}</p>
-		<p>{{report.scoreSpeed}}</p>
+		<p>Usability Score: {{report.scoreUsability}}</p>
+		<p>Speed Score: {{report.scoreSpeed}}</p>
 		<br/>
 		<p>Date: {{report.date}}</p>
 		<p>Saved at: {{report.time}}</p>
@@ -103,6 +85,8 @@
 		{% endfor %}
 		</table>
 	</div>
+	
+	{{footer|safe}}
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
