--- a/src/template/reports.html
+++ b/src/template/reports.html
@@ -1,28 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
-
-    <title>Spiderbot</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="static/css/main.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-   
-  </head>
+  {{head|safe}}
 
   <body>
 
@@ -50,6 +28,9 @@
             <li><a href="#contact">Contact</a></li>
           </ul>
           <input id="button-logout" name="button-logout" type="button" value="Log Out" onclick="location.href='/logout';" class="btn btn-warning" />
+          {% if user.lock %}
+          <input id="button-cancel" name="button-cancel" type="button" value="Cancel Validation" onclick="location.href='/cancel-validation';" class="btn btn-primary" />
+          {% endif %}
         </div><!--/.nav-collapse -->
       </div>
     </nav>
@@ -73,126 +54,128 @@
 		  	</div>
 		{% endif %}
       </div>
-    </div>
     
-    <div id = "reports_main_container">
-	    <h2>Web standards</h2>
-	    <div class="container" id="reports_subcontainer">
-	    {% for report in reports %}
-	    	{% if not report.isRank and report.validation_type == 'HTML' and (user.group == 'Admin' or report.user == user.name) %}
-	    	<div id=report">
-	    		<button id="button-delete-report-{{report.key.id()}}" class="btn btn-danger">Delete</button>
-	    		<form id="form-delete-report-{{report.key.id()}}" action="/delete-report" method="POST">
-	    			<input id="id" name="id" type="hidden" value="{{report.key.id()}}"/>
-	    		</form>
-	    		<table id="report_table">
-	    			<td><a href="viewreport?id={{report.key.id()}}"><img class="report_image" src="static/images/report.png"/></a></td>
-	    			<td>
-				    	<table id="report_subtable">
-				    		<tr>
-								<th>Web</th>
-								<td><a href="{{report.web}}">{{report.web}}</a></td>
-							</tr>
-								<th>Validation type</th>
-								<td>{{report.validation_type}}</td>
-							<tr>
-								<th>Only Domain?</th>
-								<td>{% if report.onlyDomain %} Yes {% else %} No {% endif %}</td>
-							</tr>
-							<tr>
-								<th>Pages</th>
-								<td>{{report.pages}}</td>
-							</tr>
-							<tr>
-								<th>Score</th>
-								<td>{{report.score}}</td>
-							</tr>
-						</table>
-					</td>
-				</table>
+	    <div id = "reports_main_container">
+		    <h2>Web standards</h2>
+		    <div class="container" id="reports_subcontainer">
+		    {% for report in reports %}
+		    	{% if not report.isRank and report.validation_type == 'HTML' and (user.group == 'Admin' or report.user == user.name) %}
+		    	<div id=report">
+		    		<button id="button-delete-report-{{report.key.id()}}" class="btn btn-danger">Delete</button>
+		    		<form id="form-delete-report-{{report.key.id()}}" action="/delete-report" method="POST">
+		    			<input id="id" name="id" type="hidden" value="{{report.key.id()}}"/>
+		    		</form>
+		    		<table id="report_table">
+		    			<td><a href="viewreport?id={{report.key.id()}}"><img class="report_image" src="static/images/report.png"/></a></td>
+		    			<td>
+					    	<table id="report_subtable">
+					    		<tr>
+									<th>Web</th>
+									<td><a href="{{report.web}}">{{report.web}}</a></td>
+								</tr>
+									<th>Validation type</th>
+									<td>{{report.validation_type}}</td>
+								<tr>
+									<th>Only Domain?</th>
+									<td>{% if report.onlyDomain %} Yes {% else %} No {% endif %}</td>
+								</tr>
+								<tr>
+									<th>Pages</th>
+									<td>{{report.pages}}</td>
+								</tr>
+								<tr>
+									<th>Score</th>
+									<td>{{report.score}}</td>
+								</tr>
+							</table>
+						</td>
+					</table>
+				</div>
+				{% endif %}
+			{% endfor %}
 			</div>
-			{% endif %}
-		{% endfor %}
-		</div>
-		
-		<h2>Accesibility</h2>
-	    <div class="container" id="reports_subcontainer">
-	    {% for report in reports %}
-	    	{% if not report.isRank and (report.validation_type == 'WCAG2-A' or report.validation_type == 'WCAG2-AA' or report.validation_type == 'CHECK AVAILABILITY')  and (user.group == 'Admin' or report.user == user.name) %}
-	    	<div id=report">
-	    		<button id="button-delete-report-{{report.key.id()}}" class="btn btn-danger">Delete</button>
-	    		<form id="form-delete-report-{{report.key.id()}}" action="/delete-report" method="POST">
-	    			<input id="id" name="id" type="hidden" value="{{report.key.id()}}"/>
-	    		</form>
-	    		<table id="report_table">
-	    			<td><a href="viewreport?id={{report.key.id()}}"><img class="report_image" src="static/images/report.png"/></a></td>
-	    			<td>
-				    	<table id="report_subtable">
-				    		<tr>
-								<th>Web</th>
-								<td><a href="{{report.web}}">{{report.web}}</a></td>
-							</tr>
-								<th>Validation type</th>
-								<td>{{report.validation_type}}</td>
-							<tr>
-								<th>Only Domain?</th>
-								<td>{% if report.onlyDomain %} Yes {% else %} No {% endif %}</td>
-							</tr>
-							<tr>
-								<th>Pages</th>
-								<td>{{report.pages}}</td>
-							</tr>
-							<tr>
-								<th>Score</th>
-								<td>{{report.score}}</td>
-							</tr>
-						</table>
-					</td>
-				</table>
+			
+			<h2>Accesibility</h2>
+		    <div class="container" id="reports_subcontainer">
+		    {% for report in reports %}
+		    	{% if not report.isRank and (report.validation_type == 'WCAG2-A' or report.validation_type == 'WCAG2-AA' or report.validation_type == 'CHECK AVAILABILITY')  and (user.group == 'Admin' or report.user == user.name) %}
+		    	<div id=report">
+		    		<button id="button-delete-report-{{report.key.id()}}" class="btn btn-danger">Delete</button>
+		    		<form id="form-delete-report-{{report.key.id()}}" action="/delete-report" method="POST">
+		    			<input id="id" name="id" type="hidden" value="{{report.key.id()}}"/>
+		    		</form>
+		    		<table id="report_table">
+		    			<td><a href="viewreport?id={{report.key.id()}}"><img class="report_image" src="static/images/report.png"/></a></td>
+		    			<td>
+					    	<table id="report_subtable">
+					    		<tr>
+									<th>Web</th>
+									<td><a href="{{report.web}}">{{report.web}}</a></td>
+								</tr>
+									<th>Validation type</th>
+									<td>{{report.validation_type}}</td>
+								<tr>
+									<th>Only Domain?</th>
+									<td>{% if report.onlyDomain %} Yes {% else %} No {% endif %}</td>
+								</tr>
+								<tr>
+									<th>Pages</th>
+									<td>{{report.pages}}</td>
+								</tr>
+								<tr>
+									<th>Score</th>
+									<td>{{report.score}}</td>
+								</tr>
+							</table>
+						</td>
+					</table>
+				</div>
+				{% endif %}
+			{% endfor %}
 			</div>
-			{% endif %}
-		{% endfor %}
-		</div>
-		
-		<h2>Usability</h2>
-		<div class="container" id="reports_subcontainer">
-		{% for report in reportsGoogle %}
-			{% if not report.isRank and (user.group == 'Admin' or report.user == user.name) %}
-	    	<div id=report">
-	    		<button id="button-delete-report-{{report.key.id()}}" class="btn btn-danger">Delete</button>
-	    		<form id="form-delete-report-{{report.key.id()}}" action="/delete-report" method="POST">
-	    			<input id="id" name="id" type="hidden" value="{{report.key.id()}}"/>
-	    		</form>
-	    		<table id="report_table">
-	    			<td><a href="google-viewreport?id={{report.key.id()}}"><img class="report_image" src="static/images/report.png"/></a></td>
-	    			<td>
-				    	<table id="report_subtable">
-				    		<tr>
-								<th>Web</th>
-								<td><a href="{{report.web}}">{{report.web}}</a></td>
-							</tr>
-								<th>Validation type</th>
-								<td>{{report.validation_type}}</td>
-							<tr>
-								<th>Only Domain?</th>
-								<td>{% if report.onlyDomain %} Yes {% else %} No {% endif %}</td>
-							</tr>
-							<tr>
-								<th>Pages</th>
-								<td>{{report.pages}}</td>
-							</tr>
-							<tr>
-								<th>Score</th>
-								<td>{{report.score}}</td>
-							</tr>
-						</table>
-					</td>
-				</table>
+			
+			<h2>Usability</h2>
+			<div class="container" id="reports_subcontainer">
+			{% for report in reportsGoogle %}
+				{% if not report.isRank and (user.group == 'Admin' or report.user == user.name) %}
+		    	<div id=report">
+		    		<button id="button-delete-report-{{report.key.id()}}" class="btn btn-danger">Delete</button>
+		    		<form id="form-delete-report-{{report.key.id()}}" action="/delete-report" method="POST">
+		    			<input id="id" name="id" type="hidden" value="{{report.key.id()}}"/>
+		    		</form>
+		    		<table id="report_table">
+		    			<td><a href="google-viewreport?id={{report.key.id()}}"><img class="report_image" src="static/images/report.png"/></a></td>
+		    			<td>
+					    	<table id="report_subtable">
+					    		<tr>
+									<th>Web</th>
+									<td><a href="{{report.web}}">{{report.web}}</a></td>
+								</tr>
+									<th>Validation type</th>
+									<td>{{report.validation_type}}</td>
+								<tr>
+									<th>Only Domain?</th>
+									<td>{% if report.onlyDomain %} Yes {% else %} No {% endif %}</td>
+								</tr>
+								<tr>
+									<th>Pages</th>
+									<td>{{report.pages}}</td>
+								</tr>
+								<tr>
+									<th>Score</th>
+									<td>{{report.score}}</td>
+								</tr>
+							</table>
+						</td>
+					</table>
+				</div>
+				{% endif %}
+			{% endfor %}
 			</div>
-			{% endif %}
-		{% endfor %}
 		</div>
 	</div>
+	
+	{{footer|safe}}
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
