--- a/src/template/users.html
+++ b/src/template/users.html
@@ -1,28 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
 
-    <title>Spiderbot</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="static/css/main.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-   
-  </head>
+  {{head|safe}}
 
   <body>
 
@@ -48,6 +27,9 @@
             <li><a href="#contact">Contact</a></li>
           </ul>
           <input id="button-logout" name="button-logout" type="button" value="Log Out" onclick="location.href='/logout';" class="btn btn-warning" />
+          {% if user.lock %}
+          <input id="button-cancel" name="button-cancel" type="button" value="Cancel Validation" onclick="location.href='/cancel-validation';" class="btn btn-primary" />
+          {% endif %}
         </div><!--/.nav-collapse -->
       </div>
     </nav>
@@ -69,95 +51,98 @@
 	        <div class="alert alert-danger" id="error_message">
 				<p>{{error_message}}</p>
 		  	</div>
+	  </div>
 		{% endif %}
-         <div class="container" id="reports_main_container">
-         	<table>
-         		<tr>
-         			<th>User name</th>
-         			<th>Name</th>
-         			<th>Email</th>
-         			<th>Group</th>
-         		</tr>
-         		{% for user in users %}
-         		<tr>
-         			<td>{{user.name}}</td>
-         			<td>{{user.full_name}}</td>
-         			<td><a href="mailto:{{user.email}}">{{user.email}}</a></td>
-         			<td>{{user.group}}</td>
-         			<td><button id="buttonEdit-{{user.name}}" class="btn btn-info">Edit</button></td>
-         			<td><button id="buttonDelete-{{user.name}}" class="btn btn-danger">Delete</button></td>
-         			<form id="form-delete-{{user.name}}" role="form" action="/delete-user" method="post">
+       <div class="container" id="reports_main_container">
+       	<table>
+       		<tr>
+       			<th>User name</th>
+       			<th>Name</th>
+       			<th>Email</th>
+       			<th>Group</th>
+       		</tr>
+       		{% for user in users %}
+       		<tr>
+       			<td>{{user.name}}</td>
+       			<td>{{user.full_name}}</td>
+       			<td><a href="mailto:{{user.email}}">{{user.email}}</a></td>
+       			<td>{{user.group}}</td>
+       			<td><button id="buttonEdit-{{user.name}}" class="btn btn-info">Edit</button></td>
+       			<td><button id="buttonDelete-{{user.name}}" class="btn btn-danger">Delete</button></td>
+       			<form id="form-delete-{{user.name}}" role="form" action="/delete-user" method="post">
+         		<input type="hidden" id="name" name="name" value="{{user.name}}"/>
+        		</form>
+       		</tr>
+       		<tr>
+       			<td id="edit-{{user.name}}" colspan="6">
+       				<div class="container" id="form-edit">
+	         		<form id="form-edit" role="form" action="/edit-user" method="post">
+	         			<table>
+	         			<tr>
+		         			<td><label for="edit-full_name">Full name:</label></td>
+				         	<td><input type="text" id="edit-full_name" name="edit-full_name"/></td>
+			         	</tr>
+			         	<tr>
+		         			<td><label for="edit-email">Email:</label></td>
+			         		<td><input type="email" id="edit-email" name="edit-email"/></td>
+	         			<tr>
+	         				<td><label for="edit-group">Group:</label>
+		         			<td><select id="edit-group" name="edit-group">
+		         			<option value="User">User</option>
+							<option value="Admin">Admin</option>
+							</select></td>
+		         		</tr>
+		         		<tr>
+		         			<td><label for="edit-password">Password:</label></td>
+			         		<td><input type="password" id="edit-password" name="edit-password"/></td>
+		         		</tr>
 		         		<input type="hidden" id="name" name="name" value="{{user.name}}"/>
+		         		<tr>
+		         			<td colspan="2"><button type="submit" class="btn btn-default">Submit</button></td>
+		         		</tr>
+		         		</table>
 	         		</form>
-         		</tr>
-         		<tr>
-         			<td id="edit-{{user.name}}" colspan="6">
-         				<div class="container" id="form-edit">
-			         		<form id="form-edit" role="form" action="/edit-user" method="post">
-			         			<table>
-			         			<tr>
-				         			<td><label for="edit-full_name">Full name:</label></td>
-						         	<td><input type="text" id="edit-full_name" name="edit-full_name"/></td>
-					         	</tr>
-					         	<tr>
-				         			<td><label for="edit-email">Email:</label></td>
-					         		<td><input type="email" id="edit-email" name="edit-email"/></td>
-			         			<tr>
-			         				<td><label for="edit-group">Group:</label>
-				         			<td><select id="edit-group" name="edit-group">
-				         			<option value="User">User</option>
-									<option value="Admin">Admin</option>
-									</select></td>
-				         		</tr>
-				         		<tr>
-				         			<td><label for="edit-password">Password:</label></td>
-					         		<td><input type="password" id="edit-password" name="edit-password"/></td>
-				         		</tr>
-				         		<input type="hidden" id="name" name="name" value="{{user.name}}"/>
-				         		<tr>
-				         			<td colspan="2"><button type="submit" class="btn btn-default">Submit</button></td>
-				         		</tr>
-				         		</table>
-			         		</form>
-		         		</div>
-	         		</td>
-         		</tr>
-         	{% endfor %}
-         	</table>
-         	<div class="container" id="form-create">
-         		<form id="form-create" role="form" action="/create-user" method="post">
-         			<table>
-         			<tr>
-	         			<td><label for="create-name">User name:</label></td>
-			         	<td><input type="text" id="create-name" name="create-name"/></td>
-		         	</tr>
-         			<tr>
-	         			<td><label for="create-full_name">Full name:</label></td>
-			         	<td><input type="text" id="create-full_name" name="create-full_name"/></td>
-		         	</tr>
-		         	<tr>
-	         			<td><label for="create-email">Email:</label></td>
-		         		<td><input type="email" id="edit-email" name="create-email"/></td>
-         			<tr>
-         				<td><label for="create-group">Group:</label>
-	         			<td><select id="create-group" name="create-group">
-	         			<option value="User">User</option>
-						<option value="Admin">Admin</option>
-						</select></td>
-	         		</tr>
-	         		<tr>
-	         			<td><label for="create-password">Password:</label></td>
-		         		<td><input type="password" id="create-password" name="create-password"/></td>
-	         		</tr>
-	         		<tr>
-	         			<td colspan="2"><button type="submit" class="btn btn-default">Submit</button></td>
-	         		</tr>
-	         		</table>
-         		</form>
-        	</div>
-         	<button id="buttonNew" class="btn btn-success">New user</button>
-         </div>
-	</div>
+         		</div>
+        		</td>
+       		</tr>
+       	{% endfor %}
+       	</table>
+       	<div class="container" id="form-create">
+       		<form id="form-create" role="form" action="/create-user" method="post">
+       			<table>
+       			<tr>
+        			<td><label for="create-name">User name:</label></td>
+	         	<td><input type="text" id="create-name" name="create-name"/></td>
+         	</tr>
+       			<tr>
+        			<td><label for="create-full_name">Full name:</label></td>
+	         	<td><input type="text" id="create-full_name" name="create-full_name"/></td>
+         	</tr>
+         	<tr>
+        			<td><label for="create-email">Email:</label></td>
+         		<td><input type="email" id="edit-email" name="create-email"/></td>
+       			<tr>
+       				<td><label for="create-group">Group:</label>
+        			<td><select id="create-group" name="create-group">
+        			<option value="User">User</option>
+				<option value="Admin">Admin</option>
+				</select></td>
+        		</tr>
+        		<tr>
+        			<td><label for="create-password">Password:</label></td>
+         		<td><input type="password" id="create-password" name="create-password"/></td>
+        		</tr>
+        		<tr>
+        			<td colspan="2"><button type="submit" class="btn btn-default">Submit</button></td>
+        		</tr>
+        		</table>
+       		</form>
+      	</div>
+       	<button id="buttonNew" class="btn btn-success">New user</button>
+       </div>
+  	</div>
+  	</div>
+  	{{footer|safe}}
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
