Corregidos errores y detalles visuales

--- a/src/template/reports.html
+++ b/src/template/reports.html
@@ -87,6 +87,10 @@
 									<th>Score</th>
 									<td>{{report.score}}</td>
 								</tr>
+								<tr>
+									<th>Executed by</th>
+									<td>{{report.user}}</td>
+								</tr>
 							</table>
 						</td>
 					</table>
@@ -126,6 +130,10 @@
 									<th>Score</th>
 									<td>{{report.score}}</td>
 								</tr>
+								<tr>
+									<th>Executed by</th>
+									<td>{{report.user}}</td>
+								</tr>
 							</table>
 						</td>
 					</table>
@@ -164,6 +172,10 @@
 								<tr>
 									<th>Score</th>
 									<td>{{report.score}}</td>
+								</tr>
+								<tr>
+									<th>Executed by</th>
+									<td>{{report.user}}</td>
 								</tr>
 							</table>
 						</td>
