--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -151,8 +151,12 @@ table, table td, table th{
 	text-align: center;
 }
 
-.errorSubtable tr, .errorSubtable th, .errorSubtable td{
+.errorSubtable tr, .errorSubtable th{
 	text-align: center;
+}
+
+.errorSubtable td{
+	text-align: left;
 }
 
 .errorSubtable{
@@ -198,6 +202,10 @@ table, table td, table th{
 	left: 0px;
 	width: 100%;
 	height: 5px;
+}
+
+div#speed, div#usability{
+	overflow: auto;
 }
 
 div#usability table th, div#usability table td{
